<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_app" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/r_text"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:digits="123456789"
            android:hint="@string/label_value"
            android:id="@+id/quantia_total"
            android:minHeight="75dp"
            android:autofillHints="value"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pessoas"            />

        <EditText
            android:id="@+id/numero_pessoas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="75dp"
            android:digits="1234567890"
            android:hint="@string/label_pessoas"
            android:inputType="number"
            android:autofillHints="value"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/rachou" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_height="wrap_content"
            android:text="@string/compartilhar"
            android:id="@+id/compartilhar" />

        <Button
            android:layout_width="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_height="wrap_content"
            android:text="@string/btn_reproduzir"            android:id="@+id/reproduzir" />

    </LinearLayout>

</LinearLayout>
